# Python-CPM-Implementation

./: .gitignore  LICENSE  Makefile  README.md  make.bat  pyproject.toml  requirements.txt  setup.py
docs/: API_REFERENCE.md  DEVELOPMENT.md  DPPy.txt  DPReq.txt  README.md  USAGE_GUIDE.md  example.bib  thesis.txt
examples/: advanced_examples.py  basic_examples.py  cpmdocument_examples.py  template_advanced_examples.py  template_examples.py
examples/usecases/: __init__.py  usecase_bbmri_biobank.py  usecase_embrc_jsonld.py  usecase_mou_xml.py
examples/usecases/output/: bbmri_storage_transformed.json  bbmri_storage_transformed.provn
examples/usecases/output/embrc/: Dataset1_cpm.provn  Dataset2_cpm.provn  Dataset3_cpm.provn  Dataset4_cpm.provn
examples/usecases/output/mou/acquisition/: acquisitionBundle-33-BBM-2032-136043.provn  acquisitionBundle-33-BBM-2032-888-1.provn  acquisitionBundle-33-BBM-2032-888-4.provn  acquisitionBundle-33-BBM-2032-888-53.provn  acquisitionBundle-33-BBM-2032-888-54.provn
examples/usecases/output/mou/storage/: storageBundle-33-BBM-2032-136043.provn  storageBundle-33-BBM-2032-888-1.provn  storageBundle-33-BBM-2032-888-4.provn  storageBundle-33-BBM-2032-888-53.provn  storageBundle-33-BBM-2032-888-54.provn
src/adapters/: __init__.py  prov_adapter.py
src/cpm/: __init__.py  builder.py  constants.py  exceptions.py  factory.py  model.py  model_old_backup.py  namespaces.py  template.py  template_mapper.py  ti_algorithm.py  validation.py  validation_messages.py
src/cpm/model/: __init__.py  analysis.py  core.py  cpm_document.py  io.py  traversal.py
src/graph/: __init__.py  edge.py  factory.py  node.py  wrapper.py
src/utils/: __init__.py  graph_utils.py
tests/: test_advanced_traversal.py  test_edge.py  test_mutability.py  test_node.py  test_template.py  test_validation.py  test_wrapper.py
tests/adapters/: test_prov_adapter.py
tests/graph/: test_edge.py  test_factory.py  test_graph_utils.py  test_node.py  test_wrapper.py
tests/model/: MODEL_TESTS_STATUS.md  test_advanced_traversal.py  test_analysis.py  test_comprehensive.py  test_core.py  test_cpm_document.py  test_cpm_document_additional.py  test_cpm_document_equals.py  test_cpm_document_influence.py  test_cpm_document_modification.py  test_cpm_document_removal.py  test_cpm_factory.py  test_cpm_prov_factory.py  test_cpm_utilities.py  test_io.py  test_java_parity_comprehensive.py  test_model.py  test_model_parity.py  test_mutability.py  test_traversal.py
tests/template/: test_template.py  test_template_mapper.py
tests/validation/: test_validation.py
